# news-API

./: .env  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  README.md  docker-compose.yaml  mock_artiles.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
news_api/: api.py
news_api/articles/: __init__.py  controller.py  db_data_generation.py  models.py  service.py
